--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Проверяем репозиторий на наличие изменений
         uses: actions/checkout@v4
 
-      - name: Установка python и окружения
+      - name: Установка Python и окружения
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
