--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,7 +61,7 @@ jobs:
           DB_PORT: ${{ env.PORT }}
 
       - name: Деплой
-        uses: appleboy/ssh-action@main
+        uses: appleboy/ssh-action@v2.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
